[project]
name = "webhook-to-agentbuilder"
version = "0.1.0"
description = "Lightweight webhook relay from GitHub to LangChain Agent Builder"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
    "langgraph-sdk>=0.3.1,<1.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
]

[dependency-groups]
lint = [
    "ruff>=0.14.10,<1.0.0",
    "mypy>=1.19.1,<2.0.0",
]
test = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.ruff]
line-length = 88
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # Conflicts with D211 (no-blank-line-before-class)
    "D213",   # Conflicts with D212 (multi-line-summary-first-line)
    "COM812", # Conflicts with formatter
    "ISC001", # Conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ARG",     # Allow unused arguments (fixtures)
    "S105",    # Allow hardcoded test secrets
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
